[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://GFX/Textures/square.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 0, 0.360784, 0.501961, 1 )
scale = Vector2( 2.109, 3.75 )
texture = ExtResource( 4 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 540, 960 )
scale = Vector2( 0.2, 0.2 )

[node name="Spawner" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." groups=[
"HUD",
] instance=ExtResource( 3 )]
[connection signal="enemy_eaten" from="Player" to="." method="enemy_eaten"]
[connection signal="player_eaten" from="Player" to="." method="player_eaten"]
[connection signal="pressed" from="HUD/Control/Menu/Start" to="." method="start_game"]
[connection signal="pressed" from="HUD/Control/Menu/Settings" to="." method="_on_Settings_pressed"]

[editable path="HUD"]
